# docs/swagger.json
@@ -664,7 +664,7 @@
         },
         "/login": {
             "post": {
-                "description": "send username and password to get JWT Token",
+                "description": "send username and password to get JWT Token via cookie",
                 "consumes": [
                     "application/json"
                 ],
@@ -690,7 +690,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/swagmodel.LoginResponse"
+                            "$ref": "#/definitions/swagmodel.Response"
                         }
                     }
                 }
@@ -1481,17 +1481,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "swagmodel.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                },
-                "tokenType": {
                     "type": "string"
                 }
             }
